bin_PROGRAMS = SPHERLS
SPHERLS_SOURCES = dataManipulation.cpp dataMonitoring.cpp eos.cpp global.cpp main.cpp physEquations.cpp watchzone.cpp dataManipulatoin.h dataMonitoring.h eos.h global.h main.h physEquations.h userguide.h watchzone.h
SPHERLS_LDADD = -L$(PETSC_LIB_PATH) -lpetsc
SPHERLS_CPPFLAGS = -I$(PETSC_INCLUDE_PATH)